# codeshield

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: __init__.py  health.py  integrations.py  projects.py  runs.py
api/app/core/: __init__.py  auth.py  cache.py  config.py  github.py  logging.py  redis.py  supabase.py
api/app/graph/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
api/app/webhooks/: __init__.py  github.py  verification.py
api/app/worker/: __init__.py  celery_app.py  dispatch.py  github_checks.py  lambda_handler.py  tasks.py
api/scripts/: seed_prompts.py
api/tests/: __init__.py  conftest.py  test_check_run_helpers.py  test_dispatch.py  test_graph_nodes.py  test_graph_state.py  test_graph_tools.py  test_health.py  test_integrations_api.py  test_lambda_handler.py  test_projects_api.py  test_review_task.py  test_runs_api.py  test_safe_specialist.py  test_webhook_handler.py  test_webhook_verification.py
buildspec/: build-deploy.yml  eval-nightly.yml  terraform.yml  test.yml
evals/: README.md  results.json  run.py
evals/dataset/: pr_001_sql_injection.yaml  pr_002_null_deref.yaml  pr_003_hardcoded_secret.yaml  pr_004_xss.yaml  pr_005_path_traversal.yaml  pr_006_insecure_pickle.yaml  pr_007_off_by_one.yaml  (+8 more)
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: bootstrap-infra.sh  populate-secrets.sh  register-app.sh  request-cert.sh
supabase/: config.toml
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
(+46 files in other folders)
